# the-cursed-moon-store

./: .gitignore  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md
.github/workflows/: ci.yml
crates/tcms-app/: Cargo.toml
crates/tcms-app/src/: icon_loader.rs  main.rs  store.rs  widgets.rs  window.rs
crates/tcms-app/src/pages/: compatibility.rs  detail.rs  explore.rs  installed.rs  mod.rs  settings.rs  updates.rs
crates/tcms-aur/: Cargo.toml
crates/tcms-aur/src/: lib.rs
crates/tcms-compatibility/: Cargo.toml
crates/tcms-compatibility/src/: dxvk.rs  heroic.rs  lib.rs  lutris.rs  model.rs  releases.rs  safety.rs  steam.rs  vdf.rs
crates/tcms-core/: Cargo.toml
crates/tcms-core/i18n/: en.json  fr.json  it.json  ja.json  ko.json  pt.json  ru.json  tr.json  zh.json
crates/tcms-core/src/: backend.rs  classify.rs  config.rs  error.rs  featured.rs  icons.rs  lib.rs  matching.rs  package.rs  process.rs  util.rs
crates/tcms-core/src/i18n/: catalog.rs  mod.rs
crates/tcms-flatpak/: Cargo.toml
crates/tcms-flatpak/src/: lib.rs
crates/tcms-pacman/: Cargo.toml
crates/tcms-pacman/src/: desktop.rs  lib.rs
data/: com.cursedmoon.Store.desktop  com.cursedmoon.Store.metainfo.xml
data/polkit-1/actions/: com.cursedmoon.Store.policy
scripts/: check.sh  gen_i18n.py  gen_i18n_data.py
