[package]
name = "tcms-aur"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AUR backend for The Cursed Moon Store"

[dependencies]
tcms-core = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
