[package]
name = "tcms-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core models, config, and backend traits for The Cursed Moon Store"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
