[package]
name = "tcms-flatpak"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Flatpak / Flathub backend for The Cursed Moon Store"

[dependencies]
tcms-core = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
